--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </li>
         
       <li class="nav-item">
-        <a class="nav-link" href="about.php">about</a>
+        <a class="nav-link" href="about.html">about</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="#">contact</a>
